tests/mm0_mmu/fail/bad-sort321.mm0
-- bad modifier order
provable strict pure sort s321;